--- a/first.html
+++ b/first.html
@@ -28,7 +28,7 @@
 
     <!-- <script defer src="other.js"></script> -->
 
-    <script defer src="first.js"></script>
+    <script defer src="firstsw.js"></script>
 
     <title>mapty // Map your workouts</title>
   </head>
