--- a/first.html
+++ b/first.html
@@ -28,7 +28,7 @@
 
     <!-- <script defer src="other.js"></script> -->
 
-    <script defer src="firstsw.js"></script>
+    <script defer src="firsts.js"></script>
 
     <title>mapty // Map your workouts</title>
   </head>
@@ -123,7 +123,7 @@
         </li> -->
       </ul>
 
-      <p class="copyright">
+      <!-- <p class="copyright">
         &copy; Copyright by
         <a
           class="twitter-link"
@@ -132,7 +132,7 @@
           >Jonas Schmedtmann</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
         as your own.
-      </p>
+      </p> -->
     </div>
 
     <div id="map"></div>
